; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Listener.c_UDPReceivedPacket.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Listener.c_UDPReceivedPacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32 }
%struct.TYPE_12__ = type { i32, %struct.TYPE_13__* }
%struct.TYPE_13__ = type { i64, i32, %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32, i32, %struct.TYPE_11__* }

@.str = private unnamed_addr constant [34 x i8] c"Invalid UDP Session Key 32: 0x%X\0A\00", align 1
@CONNECTION_UDP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @UDPReceivedPacket(i32* %0, %struct.TYPE_11__* %1, i32* %2, i32 %3, i8* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_11__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca %struct.TYPE_12__*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca %struct.TYPE_13__*, align 8
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_11__* %1, %struct.TYPE_11__** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  %17 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %18 = icmp eq %struct.TYPE_11__* %17, null
  br i1 %18, label %31, label %19

19:                                               ; preds = %6
  %20 = load i32*, i32** %9, align 8
  %21 = icmp eq i32* %20, null
  br i1 %21, label %31, label %22

22:                                               ; preds = %19
  %23 = load i8*, i8** %11, align 8
  %24 = icmp eq i8* %23, null
  br i1 %24, label %31, label %25

25:                                               ; preds = %22
  %26 = load i32, i32* %12, align 4
  %27 = icmp eq i32 %26, 0
  br i1 %27, label %31, label %28

28:                                               ; preds = %25
  %29 = load i32*, i32** %7, align 8
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %28, %25, %22, %19, %6
  br label %124

32:                                               ; preds = %28
  %33 = load i32, i32* %12, align 4
  %34 = icmp slt i32 %33, 16
  br i1 %34, label %35, label %36

35:                                               ; preds = %32
  br label %124

36:                                               ; preds = %32
  %37 = load i8*, i8** %11, align 8
  %38 = bitcast i8* %37 to i32*
  store i32* %38, i32** %15, align 8
  %39 = load i32*, i32** %15, align 8
  %40 = getelementptr inbounds i32, i32* %39, i64 4
  store i32* %40, i32** %14, align 8
  %41 = load i32*, i32** %7, align 8
  %42 = load i32*, i32** %14, align 8
  %43 = load i32, i32* %42, align 4
  %44 = call i32 @Endian32(i32 %43)
  %45 = call %struct.TYPE_12__* @GetSessionFromUDPEntry(i32* %41, i32 %44)
  store %struct.TYPE_12__* %45, %struct.TYPE_12__** %13, align 8
  %46 = load %struct.TYPE_12__*, %struct.TYPE_12__** %13, align 8
  %47 = icmp eq %struct.TYPE_12__* %46, null
  br i1 %47, label %48, label %52

48:                                               ; preds = %36
  %49 = load i32*, i32** %14, align 8
  %50 = load i32, i32* %49, align 4
  %51 = call i32 @Debug(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %50)
  br label %124

52:                                               ; preds = %36
  %53 = load %struct.TYPE_12__*, %struct.TYPE_12__** %13, align 8
  %54 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %53, i32 0, i32 1
  %55 = load %struct.TYPE_13__*, %struct.TYPE_13__** %54, align 8
  store %struct.TYPE_13__* %55, %struct.TYPE_13__** %16, align 8
  %56 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %57 = load i32*, i32** %15, align 8
  %58 = load i32, i32* %12, align 4
  %59 = call i32 @PutUDPPacketData(%struct.TYPE_13__* %56, i32* %57, i32 %58)
  %60 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %61 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %60, i32 0, i32 1
  %62 = load i32, i32* %61, align 8
  %63 = call i32 @Lock(i32 %62)
  %64 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %65 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %64, i32 0, i32 0
  %66 = load i64, i64* %65, align 8
  %67 = load i64, i64* @CONNECTION_UDP, align 8
  %68 = icmp eq i64 %66, %67
  br i1 %68, label %69, label %113

69:                                               ; preds = %52
  %70 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %71 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %70, i32 0, i32 2
  %72 = load %struct.TYPE_10__*, %struct.TYPE_10__** %71, align 8
  %73 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %72, i32 0, i32 2
  %74 = load %struct.TYPE_11__*, %struct.TYPE_11__** %73, align 8
  %75 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %76 = icmp ne %struct.TYPE_11__* %74, %75
  br i1 %76, label %77, label %101

77:                                               ; preds = %69
  %78 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %79 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %78, i32 0, i32 2
  %80 = load %struct.TYPE_10__*, %struct.TYPE_10__** %79, align 8
  %81 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %80, i32 0, i32 2
  %82 = load %struct.TYPE_11__*, %struct.TYPE_11__** %81, align 8
  %83 = icmp ne %struct.TYPE_11__* %82, null
  br i1 %83, label %84, label %91

84:                                               ; preds = %77
  %85 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %86 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %85, i32 0, i32 2
  %87 = load %struct.TYPE_10__*, %struct.TYPE_10__** %86, align 8
  %88 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %87, i32 0, i32 2
  %89 = load %struct.TYPE_11__*, %struct.TYPE_11__** %88, align 8
  %90 = call i32 @ReleaseSock(%struct.TYPE_11__* %89)
  br label %91

91:                                               ; preds = %84, %77
  %92 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %93 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %92, i32 0, i32 0
  %94 = load i32, i32* %93, align 4
  %95 = call i32 @AddRef(i32 %94)
  %96 = load %struct.TYPE_11__*, %struct.TYPE_11__** %8, align 8
  %97 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %98 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %97, i32 0, i32 2
  %99 = load %struct.TYPE_10__*, %struct.TYPE_10__** %98, align 8
  %100 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %99, i32 0, i32 2
  store %struct.TYPE_11__* %96, %struct.TYPE_11__** %100, align 8
  br label %101

101:                                              ; preds = %91, %69
  %102 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %103 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %102, i32 0, i32 2
  %104 = load %struct.TYPE_10__*, %struct.TYPE_10__** %103, align 8
  %105 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %104, i32 0, i32 1
  %106 = load i32*, i32** %9, align 8
  %107 = call i32 @Copy(i32* %105, i32* %106, i32 4)
  %108 = load i32, i32* %10, align 4
  %109 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %110 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %109, i32 0, i32 2
  %111 = load %struct.TYPE_10__*, %struct.TYPE_10__** %110, align 8
  %112 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %111, i32 0, i32 0
  store i32 %108, i32* %112, align 8
  br label %113

113:                                              ; preds = %101, %52
  %114 = load %struct.TYPE_13__*, %struct.TYPE_13__** %16, align 8
  %115 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %114, i32 0, i32 1
  %116 = load i32, i32* %115, align 8
  %117 = call i32 @Unlock(i32 %116)
  %118 = load %struct.TYPE_12__*, %struct.TYPE_12__** %13, align 8
  %119 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %118, i32 0, i32 0
  %120 = load i32, i32* %119, align 8
  %121 = call i32 @Cancel(i32 %120)
  %122 = load %struct.TYPE_12__*, %struct.TYPE_12__** %13, align 8
  %123 = call i32 @ReleaseSession(%struct.TYPE_12__* %122)
  br label %124

124:                                              ; preds = %113, %48, %35, %31
  ret void
}

declare dso_local %struct.TYPE_12__* @GetSessionFromUDPEntry(i32*, i32) #1

declare dso_local i32 @Endian32(i32) #1

declare dso_local i32 @Debug(i8*, i32) #1

declare dso_local i32 @PutUDPPacketData(%struct.TYPE_13__*, i32*, i32) #1

declare dso_local i32 @Lock(i32) #1

declare dso_local i32 @ReleaseSock(%struct.TYPE_11__*) #1

declare dso_local i32 @AddRef(i32) #1

declare dso_local i32 @Copy(i32*, i32*, i32) #1

declare dso_local i32 @Unlock(i32) #1

declare dso_local i32 @Cancel(i32) #1

declare dso_local i32 @ReleaseSession(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
